working on proposal

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -427,36 +427,59 @@ Answering these questions may require revisions or extensions to existing philos
 %Though it is true that motivational states are more obvious and more frequently inferred than beliefs, the attribution of intention---in a precise and complete sense---is not simpler, and may indeed be harder, than the attribution of belief'
 %\citep[p.\ 85]{astington:2001_paradox}
 
-Understanding goal-directed action involves being able to identify which events are actions and to link actions to the goals to which they are directed.
-Infants' expectations indicate that they can do both of these things from some time around the end of their first year of life \citep{Csibra:2003kp}. 
-Suppose we take these expectations to show that infants understand action.
-In what could this understanding consist?
 
-On a standard view, for an event to be a goal-directed action requires that it stands in some relation to an intention. 
-Intentions are propositional attitudes which play characteristic roles in planning and coordinating action, are linked to practical reasoning and are subject to characteristic norms \citep{Bratman:1987xw}.
-On this view, an action is directed to a goal in virtue of being an event related  an intention whose content specifies this goal. 
-Accordingly, understanding action involves understanding intentions and so having mastered propositional attitude psychology.
-This view of what understanding action consists in coheres with the views of those who hold that one-year-old infants understand psychological notions like belief and desire \citep{Baillargeon:gx}.
+Tracking a goal-directed action involves at least two things: distinguishing the action from other events 
+and
+identifying to which goal or goals it is directed.
+Infants' expectations indicate that they can do both of these things from some time around the end of their first year of life \citep[e.g.][]{Csibra:2003kp}. 
+But tracking is not understanding.
+To say that infants can track goal-directed action is not yet to say anything about what they understand of action.
+Consider two questions about the nature of action.
+First, which events are actions?
+Second, what is the relation between an action and the goal or goals to which the action is directed?
+For each of these we can ask corresponding questions about infants' understanding of action.
+Which events do infants take to be actions?
+And how do they understand the relation between actions and the goals to which they are directed?
+We need to answer these questions in order to understand how early abilities to track action are developmentally related to knowledge of action, and also how they relate to developments in other domains including language.
+In this chapter we consider what infants understand of action.
+
+
+The question of what actions are is usually answered by appeal to intention, a propositional attitude which plays a characteristic role in planning and coordinating action, is linked to practical reasoning and is subject to characteristic norms (\citealp{Bratman:1987xw}).  
+On the standard view, an action is directed to an goal in virtue of the action's being appropriately related to an intention which represents this goal or some related goal.
+The corresponding view about understanding has it that 
+understanding action involves understanding intentions and so having mastered propositional attitude psychology.
+Could this be how infants understand actions?
+This view would be consistent with the views of those who hold that one-year-old infants understand psychological notions like belief and desire \citep{Baillargeon:gx}.
 But this view is incompatible with  views on which early understanding of action plays a role in explaining how children later acquire knowledge of belief, desire and other mental states.
+We should therefore consider alternative, less conceptually demanding accounts of action understanding.
 
-An alternative view of action and action understanding does not demand knowledge of intentions.
+Are there alternative views of action understanding which do not demand knowledge of intentions?
+As before, it is helpful to start with a view about what actions are and then consider corresponding views about understanding actions.
 Instead of thinking of the relation between actions and the goals to which they are directed as determined by intentions representing those goals,
-we might instead attempt to explain the relation in terms of justification:
+we might instead attempt to explain the relation in terms of justification.
+This is the idea behind Gergely and Csibra's `principle of rational action' which states that:
 %
 \begin{quote}
-`the principle of rational action ... states that an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality' 
+`%the principle of rational action ... states that 
+an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality' 
 (Csibra and Gergely 1998: 255; cf. Csibra, Bíró, et al. 2003)
 \end{quote}
 %
-***Don't we have to separate out the question of which events are actions?
-***Want to argue that the view is still demanding---and incompatible with modularity---because requires reasoning about justification.  
-Indeed:
+%*Don't we have to separate out the question of which events are actions?
+This view of action understanding requires less conceptual sophistication thanks to not requiring knowledge of intentions as such. 
+But remains quite demanding, for it entails that one-year-olds  are able to justify actions and engage in means end reasoning.
+Gergely and Csibra stress this aspect of their view:
 %
 \begin{quote}
-`when taking the teleological stance one-year-olds apply the same inferential principle of rational action that drives everyday mentalistic reasoning about intentional actions in adults' \citep[p.\ 259]{Csibra:1998cx}\citep[compare][p.\ 290]{Gergely:2003gb}
+`%when taking the teleological stance 
+one-year-olds apply the same inferential principle of rational action that drives everyday mentalistic reasoning about intentional actions in adults' (\citealp[p.\ 259]{Csibra:1998cx}; \citealp[compare][p.\ 290]{Gergely:2003gb})
 \end{quote}
 %
-***
+This is incompatible with the notion that infants' abilities to track action depend on core knowledge or modular representations.
+For, as we saw in Chapter 2 (on Objects),  processes involving core knowledge  are supposed to be informationally encapsulated;
+and informationally encapsulated processes cannot represent relations involving rationality or justification as such \citep{Fodor:2000cj}.
+To see whether it is even theoretically coherent to suppose that understanding action could involve core knowledge only, we must find alternative accounts of what it is to understand actions, accounts that involve neither intention nor rationality.
+
 
 %Some philosophers oppose the standard view of goal-directed action.
 %Instead of explaining the directedness of actions to goals by appeal to intentions which represent those goals, 
@@ -465,14 +488,25 @@ Indeed:
 %One perhaps inadequate but illustrative construal says that an action has the function of bringing about an outcome just if (i) actions of this type have brought about outcomes of this type in the past, and (ii) this action occurs now in part because of that fact.
 %Teleological accounts of function, and of the application of this notion to understanding goal-directed action, have been extensively developed \citep[see further][]{Godfrey-Smith:1996ln,Millikan:1984ib,Neander:1991to,Price:2001hs,Wright:1976ls}.
 
-There is a radical alternative ... understanding consist in motor awareness of action ...
-\begin{quote}
-\citep[p.\ 154]{bekkering:2000_imitation}: `behaviours are not simply replicated as unified, non-decomposed motor patterns. Rather, imitation involves first a decomposition of the motor patterns into their constituent components and later a reconstruction of the action pattern from these components. Second, the decomposition--reconstruction process is guided by an interpretation of the motor pattern as a goal- directed behaviour. Thus, the constituent elements in the mediating representation involve goals rather than motor segments. Third, we assume that these goals are represented in a hierarchical pattern with some of the encoded goals being dominant over others.' 
-\end{quote}
+So far we have ignored the possibility that motor representations and processes may play a role in understanding action.
+It is now well established that motor processes and representations are involved in observing actions---not only in producing them \citep{rizzolatti_functional_2010}.
+Furthermore, some motor representations represent outcomes to which actions are directed \citep{jeannerod_motor_2006}. 
+For instance, observing another grasping a cup can involve a motor representation of the outcome, of the cup's being grasped, and not only motor representations of merely kinematic or dynamic features.
+Apparently, then, motor planning can be used in reverse: it can be used for inferring a goal from an observed action and not only for  determining what to do in order to achieve a particular goal.
+We also know that, in adults and infants alike, motor representation can facilitate judgements about the goals of actions 
+(on adults: \citealp{serino:2009_lesions_,pazzaglia:2008_sound_}; on infants: \citealp{bekkering:2000_imitation}).
+It is possible, therefore, that infants can track actions not because they know about agent's intentions or consider the rationality of actions,
+but because their motor expertise enables  them to  determine to which goals others' actions could be directed. 
+(This is surely not the whole story, but it can be extended to involve statistical learning as well as motor representation; see \citet{paulus:2011_role}, \citet{Baldwin:2001rn}, and \citet{Saylor:2007pj}.)
 
-***parallels between how visual representations and processes enable experiences of objects and how motor representations and processes enable experiences of actions. Of course, just as not every visual representation leaves its mark on experience, there are surely many motor representations that are only distantly if at all related to experience. But, equally, there are experiences which depend in part on motor representation in much the way that some visual experiences depend in part on visual representations.
 
-
+%\begin{quote}
+%\citep[p.\ 154]{bekkering:2000_imitation}: `behaviours are not simply replicated as unified, non-decomposed motor patterns. Rather, imitation involves first a decomposition of the motor patterns into their constituent components and later a reconstruction of the action pattern from these components. Second, the decomposition--reconstruction process is guided by an interpretation of the motor pattern as a goal- directed behaviour. Thus, the constituent elements in the mediating representation involve goals rather than motor segments. Third, we assume that these goals are represented in a hierarchical pattern with some of the encoded goals being dominant over others.' 
+%\end{quote}
+%
+%*parallels between how visual representations and processes enable experiences of objects and how motor representations and processes enable experiences of actions. Of course, just as not every visual representation leaves its mark on experience, there are surely many motor representations that are only distantly if at all related to experience. But, equally, there are experiences which depend in part on motor representation in much the way that some visual experiences depend in part on visual representations.
+%
+%
 
 
 \subsection{Chapter 7. Beliefs}
