proposal finished draft check conclusion

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -16,8 +16,23 @@ cognitive development}
 \date{}
 
 
-\input{$HOME/Documents/submissions/preamble_steve_report}
+%\input{$HOME/Documents/submissions/preamble_steve_report}
+\input{$HOME/Documents/submissions/preamble_steve_paper2}
+
+%adjust title size & font
+\pretitle{
+	\begin{center}
+	%\sffamily
+	\LARGE
+} 
+
 %\author{}
+
+%change fonts (not anonymous)
+%\setromanfont[Mapping=tex-text]{Linux Libertine O} 
+%\setsansfont[Mapping=tex-text]{Linux Biolinum O} 
+%\setmonofont[Scale=MatchLowercase]{Andale Mono}
+
 
 %use titlesec package to make subsections bold italics
 \titleformat*{\subsection}{\bfseries\itshape}  
@@ -33,6 +48,7 @@ cognitive development}
 
 
 \tolerance=5000
+
 
 \maketitle
 %\tableofcontents
@@ -120,7 +136,7 @@ I aim to try out material for the book while teaching courses at  Central Europe
 
 
 \section{Competition}
-At the time of writing there is no book or collection devoted to philosophical issues in cognitive development other than \textit{The Philosophical Baby} \citep{gopnik:2009_philosophical} which is primarily aimed at general readers.
+At the time of writing there is no book or collection devoted to philosophical issues in cognitive development other than \textit{The Philosophical Baby} \citep{gopnik:2009_philosophical}  is primarily aimed at general readers.
 
 Philosophers have written monographs and edited collections on particular issues in cognitive development \citep[e.g.][]{Bermudez:2003dj,carruthers:1996_theories}.  
 The proposed book complements these by providing integrated discussion of a wider range of topics. 
@@ -175,6 +191,11 @@ We have many vocabularies for describing nature when we regard it as mindless, a
 %Even so, Davidson 
 %
 To understand the emergence of knowledge we need to find ways of describing what is in between: individuals whose movements are neither mindless nor guided by intention and knowledge.  
+And the ways we find to describe these individuals 
+%that are not only theoretically coherent and empirically motivated---in addition,
+%we need ways of describing these individuals 
+must enable us to understand what it is like to be them, to
+see things from their points of view.
 Some progress has already been made but many challenges remain. 
 Philosophers have much to contribute in crafting distinctions and conceptual tools useful for meeting the challenges involved in describing what is in between. 
 There is also much for philosophers to gain: studying what is in between mindless nature and the sorts of cognition captured by   commonsense psychological notions 
@@ -374,7 +395,9 @@ Compare Wittgenstein (\citeyear[p.\ 77]{Wittgenstein:1972lj}):
 %See also Russell (1921: 71): “A child learning to speak is learning habits and associations which are just as much determined by the environment as the habit of expecting dogs to bark and cocks to crow. The community that speaks a language has learnt it, and modified it by processes almost all of which are not deliberate, but the results of causes operating according to more or less ascertainable laws.”
 \end{quote}
 %
-If this sort of view were right, abilities to communicate linguistically would not necessarily depend on knowledge proper and so it would be possible to appeal to linguistic communication in explaining the developmental origins of knowledge. 
+If this sort of view were right, abilities to communicate linguistically would not necessarily depend on knowledge proper. 
+So it would be possible to conjecture that the emergence in development of knowledge proper is a consequence of 
+training with language.
 %Compare Wittgenstein again:
 %`535. The child knows what something is called if he can reply correctly to the question "what is that called?"
 %536. Naturally, the child who is just learning to speak has not yet got the concept is called at all.
@@ -384,12 +407,14 @@ If this sort of view were right, abilities to communicate linguistically would n
 This does indeed seem plausible for the special case of colour words, as we saw in Chapter 4 (on Colours); 
 and something like it may hold for number words too (see Chapter 3 on Numbers).  
 %ref to Wittgenstein on child learning about numbers somewhere?
-But putting these special cases aside, the experimental findings do not support Wittgenstein's view.
+But putting these special cases aside, the experimental findings do not support Wittgenstein's claim that language is entirely acquired through training.
 Instead they support the hypothesis that children solve the mapping problem by general reasoning and rely on social cognition
 \citep{Baldwin:1995xl,Bloom:2000qz,Sabbagh:2001sp}. 
-%Also talk about language creation here (see lexical innovation paper)
+This hypothesis is further supported by findings that children who have learnt few or no words sometimes invent their own words \citep{Clark:1993bv}, 
+and by
+research on profoundly deaf children brought up in purely oral environments and therefore without experience of language who, individually or in groups, create their own signed languages \citep{Kegl:1999es,Senghas:2001zm,Goldin-Meadow:2003pj}. 
 
-This hypothesis conflicts with Davidson's claims that having thoughts involves grasping the concept of truth \citep[p.\ 189]{Davidson:2001sm}, 
+This hypothesis---children solve the mapping problem by general reasoning---conflicts with Davidson's claims that having thoughts involves grasping the concept of truth \citep[p.\ 189]{Davidson:2001sm}, 
 % `What gives my belief its content ... is my knowledge of what is required for the belief ... to be true' \citep[p.\ 189]{Davidson:2001sm}, 
 and that `we grasp the concept of truth only when we can communicate the contents—the propositional contents—of the shared experience, and this requires language' \citep[p.\ 27]{Davidson:1997wj}.
 % also:
@@ -441,7 +466,7 @@ For each of these we can ask corresponding questions about infants' understandin
 Which events do infants take to be actions?
 And how do they understand the relation between actions and the goals to which they are directed?
 We need to answer these questions in order to understand how early abilities to track action are developmentally related to knowledge of action, and also how they relate to developments in other domains including language.
-In this chapter we consider what infants understand of action.
+In this chapter we explore three hypotheses about the understanding which underpins infants' abilities to track action.
 
 
 The question of what actions are is usually answered by appeal to intention, a propositional attitude which plays a characteristic role in planning and coordinating action, is linked to practical reasoning and is subject to characteristic norms (\citealp{Bratman:1987xw}).  
@@ -453,7 +478,7 @@ This view would be consistent with the views of those who hold that one-year-old
 But this view is incompatible with  views on which early understanding of action plays a role in explaining how children later acquire knowledge of belief, desire and other mental states.
 We should therefore consider alternative, less conceptually demanding accounts of action understanding.
 
-Are there alternative views of action understanding which do not demand knowledge of intentions?
+Are there alternative views of what understanding actions involves which do not demand knowledge of intentions?
 As before, it is helpful to start with a view about what actions are and then consider corresponding views about understanding actions.
 Instead of thinking of the relation between actions and the goals to which they are directed as determined by intentions representing those goals,
 we might instead attempt to explain the relation in terms of justification.
@@ -466,8 +491,14 @@ an action can be explained by a goal state if, and only if, it is seen as the mo
 \end{quote}
 %
 %*Don't we have to separate out the question of which events are actions?
-This view of action understanding requires less conceptual sophistication thanks to not requiring knowledge of intentions as such. 
-But remains quite demanding, for it entails that one-year-olds  are able to justify actions and engage in means end reasoning.
+As part of an account of what actions are, this is unlikely to be correct.
+After all, agents sometimes fail to select actions that could be justified (or seen as justifiable) given the goal to which they are directed.
+\citet[p.\ 123]{Csibra:2003jv} themselves note this point.
+But the principle of rationality might serve as a useful approximation.
+Perhaps someone who applied the principle of rationality to work out which goals actions are directed to would be right much of the time. 
+So perhaps infants' abilities to track actions involve understanding action in accordance with the principle of rationality.
+This view of action understanding requires less conceptual sophistication thanks to not requiring knowledge of intentions or other propositional attitudes as such. 
+But it remains quite demanding, for it entails that one-year-olds  are able to justify actions and engage in means end reasoning.
 Gergely and Csibra stress this aspect of their view:
 %
 \begin{quote}
@@ -488,7 +519,7 @@ To see whether it is even theoretically coherent to suppose that understanding a
 %One perhaps inadequate but illustrative construal says that an action has the function of bringing about an outcome just if (i) actions of this type have brought about outcomes of this type in the past, and (ii) this action occurs now in part because of that fact.
 %Teleological accounts of function, and of the application of this notion to understanding goal-directed action, have been extensively developed \citep[see further][]{Godfrey-Smith:1996ln,Millikan:1984ib,Neander:1991to,Price:2001hs,Wright:1976ls}.
 
-So far we have ignored the possibility that motor representations and processes may play a role in understanding action.
+So far we have ignored the possibility that motor representations and processes play a role in understanding action.
 It is now well established that motor processes and representations are involved in observing actions---not only in producing them \citep{rizzolatti_functional_2010}.
 Furthermore, some motor representations represent outcomes to which actions are directed \citep{jeannerod_motor_2006}. 
 For instance, observing another grasping a cup can involve a motor representation of the outcome, of the cup's being grasped, and not only motor representations of merely kinematic or dynamic features.
@@ -497,7 +528,17 @@ We also know that, in adults and infants alike, motor representation can facilit
 (on adults: \citealp{serino:2009_lesions_,pazzaglia:2008_sound_}; on infants: \citealp{bekkering:2000_imitation}).
 It is possible, therefore, that infants can track actions not because they know about agent's intentions or consider the rationality of actions,
 but because their motor expertise enables  them to  determine to which goals others' actions could be directed. 
-(This is surely not the whole story, but it can be extended to involve statistical learning as well as motor representation; see \citet{paulus:2011_role}, \citet{Baldwin:2001rn}, and \citet{Saylor:2007pj}.)
+(This is surely not the whole story, but it can be extended to involve statistical learning as well as motor representation; see \citet{paulus:2011_role}.)
+%don't cite here: these are to do with segmentation
+%, \citet{Baldwin:2001rn}, and \citet{Saylor:2007pj}.)
+On this hypothesis, infants' abilities to track action do not involve understanding actions in the way that human adults do (or are standardly held to). 
+For this reason the hypothesis might  appear  to make infants' abilities concerning action philosophically uninteresting.
+We can see that this appearance is mistaken by reflecting on how intentions (and other propositional attitudes) might refer to actions involving bodily movements.
+The considerations for the view that 
+thought about objects depends on perceptual experience of them  \citep[see][]{Campbell:2002ge} 
+also support the view that 
+all thought about actions ultimately depends on motor experience of them.
+
 
 
 %\begin{quote}
@@ -594,7 +635,40 @@ colours,
 actions
 and
 minds? 
-***
+Maybe.
+%In some special cases---number, colour, words and minds---there are theories which make testable predictions.
+%These theories conflict with some philosophers' views about development.
+%Most obviously, these theories provide objections to any form of nativism on which number, colour or psychological concepts are innate.
+%The findings that inform these theories also lead to objections to ***Wittgenstein ***Davidson
+We have seen that apparent inconsistencies in developmental findings concerning knowledge of objects (Chapter 2) and knowledge of minds (Chapter 7) can be resolved by distinguishing kinds of knowledge.
+One challenge was to make such distinctions in ways that are both  theoretically coherent and empirically motivated.
+A first step was to appeal to the notions of modularity and core knowledge; a further step was to consider how, in particular cases (including objects, numbers, colours and actions), perceptual and motor representations and processes can constitute core knowledge.
+
+A second, related challenge arises from hypotheses that social interaction enables the emergence in development of knowledge.  
+For this hypothesis to be coherent, there must be forms of social interaction which do not already presuppose the knowledge whose emergence is to be explained.
+Existing accounts of social interaction apply only to those who already have knowledge of several domains, including objects, actions and minds.
+The challenge, then, is to characterise these simple forms of social interaction.
+
+Distinguishing core knowledge from knowledge proper 
+and
+characterising simple forms of social interaction
+are 
+two key theoretical ingredients of
+developmental theories with testable predictions for some special cases, including numbers, colours, words and minds.
+These theories will probably turn out to be wrong, of course.
+What seems secure, though, is the idea that explaining development requires 
+%1
+distinguishing multiple kinds of knowledge, 
+%2
+identifying simple forms of social interaction 
+and 
+%3
+understanding how 
+	these jointly enable development.
+	%social interaction can transform knowledge.
+
+
+
 
 
 \bibliography{$HOME/endnote/phd_biblio}
