proposal about to send it

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -640,11 +640,11 @@ Maybe.
 %These theories conflict with some philosophers' views about development.
 %Most obviously, these theories provide objections to any form of nativism on which number, colour or psychological concepts are innate.
 %The findings that inform these theories also lead to objections to ***Wittgenstein ***Davidson
-We have seen that apparent inconsistencies in developmental findings concerning knowledge of objects (Chapter 2) and knowledge of minds (Chapter 7) can be resolved by distinguishing kinds of knowledge.
-One challenge was to make such distinctions in ways that are both  theoretically coherent and empirically motivated.
-A first step was to appeal to the notions of modularity and core knowledge; a further step was to consider how, in particular cases (including objects, numbers, colours and actions), perceptual and motor representations and processes can constitute core knowledge.
+We have seen that apparent inconsistencies in developmental findings concerning knowledge of objects (Chapter 2) and minds (Chapter 7) can be resolved by distinguishing kinds of knowledge.
+One challenge is to make such distinctions in ways that are both  theoretically coherent and empirically motivated.
+In addressing this challenge we appealed to the notions of modularity and core knowledge and considered how, in particular cases (including objects, numbers, colours and actions), perceptual and motor representations and processes can realise core knowledge.
 
-A second, related challenge arises from hypotheses that social interaction enables the emergence in development of knowledge.  
+A second, related challenge arises from the hypothesis that social interaction enables the emergence in development of knowledge.  
 For this hypothesis to be coherent, there must be forms of social interaction which do not already presuppose the knowledge whose emergence is to be explained.
 Existing accounts of social interaction apply only to those who already have knowledge of several domains, including objects, actions and minds.
 The challenge, then, is to characterise these simple forms of social interaction.
@@ -652,10 +652,11 @@ The challenge, then, is to characterise these simple forms of social interaction
 Distinguishing core knowledge from knowledge proper 
 and
 characterising simple forms of social interaction
-are 
-two key theoretical ingredients of
-developmental theories with testable predictions for some special cases, including numbers, colours, words and minds.
-These theories will probably turn out to be wrong, of course.
+yielded 
+two key ingredients of
+developmental theories for some special cases, including numbers, colours, words and minds.
+We know that these  theories advance our understanding of development because they lead to new objections to various philosophical views about nativism, language acquisition and the dependence of thought on language.
+Of course these theories will probably turn out to be wrong.
 What seems secure, though, is the idea that explaining development requires 
 %1
 distinguishing multiple kinds of knowledge, 
