second paper tex formatting

--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -34,8 +34,9 @@
 
 \begin{abstract}
 \noindent
-On the assumption that social motor representation plays a role in explaining how effective joint action is possible, is there also a role for motor representation in explaining what joint action is?  
-Philosophers tend to assume that motor representation is only an enabling condition for joint action and of no direct interest to narrowly philosophical theories of joint action and shared intention.  In this talk I shall argue that social motor representation and shared intention  have distinctive roles in explaining the purposiveness of joint action.  This gives rise to a challenge.  On the one hand, effective joint action---imagine two people erecting a tent in a gale together---sometimes requires both shared intentions and social motor representations plus a certain kind of harmony between the two.  On the other hand, recognizing their distinctive roles precludes the existence of direct inferential links between shared intentions and social motor representations.  The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite the lack of inferential integration.
+On the assumption that motor representation plays a role in explaining how effective joint action is possible, is there also a role for motor representation in explaining what joint action is?  
+Philosophers tend to assume that motor representation is only an enabling condition for joint action and of no direct interest to narrowly philosophical theories of joint action and shared intention.  In this paper we identify a certain structure of motor representations---call it \textit{social motor representation}---which can enable joint action,
+and we argue that social motor representation and shared intention  have distinctive roles in explaining the purposiveness of joint action.  This gives rise to a challenge.  On the one hand, effective joint action---imagine two people erecting a tent in a gale together---sometimes requires both shared intentions and social motor representations plus a certain kind of harmony between the two.  On the other hand, recognizing their distinctive roles precludes the existence of direct inferential links between shared intentions and social motor representations.  The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite the lack of inferential integration.
 \end{abstract}
 
 \section{Introduction}
@@ -69,7 +70,8 @@ A representation (motor or not) is \emph{agent-neutral} if its content does not 
 To illustrate, agent neutral representations are sometimes found at the early stages of planning.
 Imagine that you and some friends are tasked with preparing a holiday.  
 You might first write down a plan of action without specifying who will act; the plan simply describes what is to be done.
-The plan  will eventually be implemented by you and your friends but the plan itself does not specify this and so it is agent-neutral.
+The plan  will eventually be implemented by you and your friends
+ but this is not written in plan itself  and so it is agent-neutral.
 Of course the fact that this plan is your collective plan may be represented elsewhere; this fact may also be implicit in  the plan's being stapled to the door of your communal kitchen.
 The agent-neutrality of a representation does not require that the agents are nowhere specified, only that they are not specified in the content of the representation.\footnote{
 Strictly the following argument does not hinge on the agent-neutrality of representations.
@@ -112,16 +114,16 @@ Since the researchers did not include a condition where there was a competitive,
 What we do take this paper to indicate, 
 together with a body of other research on motor representation of observed action,
 is this.
-If you are engaged in a joint action with someone, one which involves moving an object by passing it between you, then each of you has motor representations of actions whose (perhaps improper) components include actions which will be performed by the other  and these motor representations are functionally equivalent to motor representations of your own actions in the sense that they are just the sorts of representation that might have caused you to do what the other is doing (if you were in her position).
+If you are engaged in a joint action with someone, one which involves moving an object by passing it between you, then each of you has motor representations of actions whose (perhaps improper) components include actions which will be performed by the other  and these motor representations are functionally equivalent to motor representations of your own actions in the sense that they are just the sorts of representation that might have caused you to do what the other is doing if you were in her position.
 
 For each of the agents involved in a joint action to represent motorically actions whose (perhaps improper) components include the others' action is not yet for there to be social motor representation.
 For there to be social motor representation there must be an outcome (such as the movement of an object from one place to another) which each agent has an agent-neutral motor representation of.
 The experiment by \citet{kourtis:2010_favoritism} was not designed to distinguish
-a case in which each agent represents the outcome to which the  whole joint action is directed (in this case, the entire movement of the object)
+cases in which each agent represents the outcome to which the  whole joint action is directed (in this case, the entire movement of the object)
 from
-a case in which 
+ cases in which 
 each agent represents separately outcomes to which each of the individual actions comprising the joint action (in this case, the several movements of the object each of which just one agent is responsible for).
-However we are making a leap and assuming (without argument) that in cases like that studied by Kourtis and colleagues, there is sometimes social motor representation.
+We are making a leap and assuming (without argument) that in cases like that studied by Kourtis and colleagues, there is sometimes social motor representation.
 
 
 
@@ -134,7 +136,7 @@ How could social motor representation enable joint action even in principle?
 
 To answer this question
 let us take a step back and consider an individual action.
-Suppose an agent moves a mug from one place to another, passing in from her left hand to her right hand half way.
+Suppose an agent moves a mug from one place to another, passing it from her left hand to her right hand half way.
 It is a familiar idea that motor planning, like planning generally, involves starting with relatively abstract representations of outcomes and gradually filling in details.
 We can capture this by supposing that 
 motor representations for planning and monitoring action involve a hierarchical structure of representations.
@@ -151,7 +153,9 @@ It is in part because they are parts of a larger plan that the plan for one hand
 How is this relevant to the case of joint action?
 In joint action the agents have the same goal, to move the object from one place to another.
 They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
-Now suppose (inspired by Koutis et al’s and others' findings) that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
+Now suppose, 
+inspired by Koutis et al’s and others' findings,
+that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
 The planning is the same almost up to the actual muscle contractions.
 How could this be helpful?
 Suppose the agents' planning processes are similar enough that, for a given context and problem, they will produce approximately the same plans.
@@ -173,7 +177,11 @@ So what is the difference between the individual and the joint case?  From the p
 
 \section{Grounding the purposiveness of joint action}
 So far we have only been considering a possible role for social motor representation in enabling joint action.  
-But I think the details already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
+Our primary concern, though, is with what joint action is.
+And of course not all enabling features are constitutive. 
+But the details of how 
+social motor representation enables joint action
+ already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
 To see why,
 let’s go back to individual action for a moment again.
 
